k8s/frontend-gateway/dashboard-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-vue
  labels:
    app: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
      - name: vue-app
        image: meteo/meteo-dashboard:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 80
