k8s/frontend-gateway/fetcher-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: data-fetcher-pod
  labels:
    app: fetcher
spec: 
  containers:
  - name: fetcher-app
    image: meteo/meteo-fetcher:v1
    imagePullPolicy: Never
