k8s/frontend-gateway/gateway-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: api-gateway
  labels:
    app: gateway
spec:
  containers:
  - name: nginx
    image: nginx:alpine
    ports:
    - containerPort: 80
    volumeMounts:
    - name: nginx-config
      mountPath: /etc/nginx/conf.d/
  volumes:
  - name: nginx-config
    configMap:
      name: nginx-gateway-conf
