k8s/frontend-gateway/dashboard-pod-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashboard-vue
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashboard
  template:
    metadata:
      labels:
        app: dashboard
    spec:
      containers:
      - name: vue-app
        image: tibaaault/meteo-dashboard:latest 
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard-svc
spec:
  type: NodePort
  selector:
    app: dashboard
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
