k8s/frontend-gateway/dashboard-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-svc
spec:
  type: NodePort
  selector:
    app: dashboard
  ports:
    - protocol: TCP
      port: 81
      targetPort: 80
