k8s/frontend-gateway/gateway-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-svc
spec:
  type: NodePort
  selector:
    app: gateway
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
