k8s/frontend-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meteo-ingress
spec:
  rules:
  - http:
      paths:
      # Point d'entrée unique via la Gateway
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gateway-svc
            port:
              number: 80
